--- a/DLK-project_SN/DLK-project_SN.html
+++ b/DLK-project_SN/DLK-project_SN.html
@@ -23,7 +23,7 @@
     </nav>
   </header>
   <main class="main">
-  <div class="slideshow-container">
+  <section class="slideshow-container">
     <h2 class="hidden">slideshow</h2>
       <div class="slider-items">
         <div class="slideshow-item">
@@ -58,7 +58,7 @@
       <button class="slideshow-control_fourth"><img src="/images/icon.png" alt="button icon"></button>
     </div>
     <p class="poster-footer_text">Free (continental) USA shipping on all orders of $100 USD or more!</p>
-  </div>
+  </section>
   <section class="products">
     <h2 class="products-title">Category Products</h2>
     <ul class="product-list">
@@ -172,7 +172,20 @@
 </div>
 <div class="rating">
   <p class="rating-text">Company Rating</p>
-  <!-- рейтинг -->
+  <input name="rating" value="5" id="rating_5" type="radio">
+  <label for="rating_5" class="label_rating"></label>
+  
+  <input name="rating" value="4" id="rating_4" type="radio">
+  <label for="rating_4" class="label_rating"></label>
+  
+  <input name="rating" value="3" id="rating_3" type="radio">
+  <label for="rating_3" class="label_rating"></label>
+  
+  <input name="rating" value="2" id="rating_2" type="radio">
+  <label for="rating_2" class="label_rating"></label>
+  
+  <input name="rating" value="1" id="rating_1" type="radio">
+  <label for="rating_1" class="label_rating"></label>
 </div>
 <div class="copyright">
   <p class="copyright-text">Copyright © 2018 Dlk • Design Life Kids</p>
