Разметка третий страницы + контак. форма на главной

--- a/DLK-project_SN/DLK-project_SN.html
+++ b/DLK-project_SN/DLK-project_SN.html
@@ -194,5 +194,25 @@
   <p class="dl-text">Web Design — Direct Line Development</p>
 </div>
 </footer>
+<div class="modal-window">
+<form class="contact-form" action="https://form-data-dl.herokuapp.com/api/messages" method="POST">
+  <label for="contact-name">Name</label>
+  <input type="text" name="name" id="contact-name">
+
+  <label for="contact-phone">Phone</label>
+  <input type="tel" name="phone" id="contact-phone">
+
+  <label for="contact-email">Email</label>
+  <input type="email" name="email" id="contact-email">
+
+  <label for="contact-message">Message</label>
+  <textarea name="message" id="contact-message" cols="30" rows="10"></textarea>
+
+  <input type="checkbox" name="accept" id="contact-accept" value="accept">
+  <label for="contact-accept">By clicking on the button, you consent to the processing of your personal data</label>
+
+  <button type="submit">Submit</button>
+</form>
+</div>
 </body>
 </html>
