Вместо див использовал списки в Toys

--- a/DLK-project_SN/pages/Catalog/Toys/toys.html
+++ b/DLK-project_SN/pages/Catalog/Toys/toys.html
@@ -97,48 +97,50 @@
     </section>
     <section class="toys-list">
       <h2 class="hidden">Toys</h2>
-      <div class="toys-item">
+      <ul>
+      <li class="toys-item">
         <a class="toys-link" href="#">
           <img src="/images/sharky.png" alt="Sharky Bean Bag Chair">
           <span class="toys-text">SHARKY BEAN BAG CHAIR COVER</span>
           <span class="toys-price">$60.00 USD</span>
         </a>
-      </div>
-      <div class="toys-item">
+      </li>
+      <li class="toys-item">
         <a class="toys-link" href="#">
           <img src="/images/brass.png" alt="Brass Deco">
           <span class="toys-text">BRASS DECO FRAMES</span>
           <span class="toys-price">$66.00 USD</span>
         </a>
-      </div>
-      <div class="toys-item">
+      </li>
+      <li class="toys-item">
         <a class="toys-link" href="#">
           <img src="/images/cibo.png" alt="Cibo Full">
           <span class="toys-text">CIBO FULL APRON</span>
           <span class="toys-price">$60.00 USD</span>
         </a>
-      </div>
-      <div class="toys-item">
+      </li>
+      <li class="toys-item">
         <a class="toys-link" href="#">
           <img src="/images/gatcha.png" alt="Gumball Machine">
           <span class="toys-text">GATCHA GATCHA GUMBALL MACHINE</span>
           <span class="toys-price">$56.00 USD</span>
         </a>
-      </div>
-      <div class="toys-item">
+      </li>
+      <li class="toys-item">
         <a class="toys-link" href="#">
           <img src="/images/candle.png" alt="Scented Candle">
           <span class="toys-text">CHRISTMAS ADVENT SCENTED CANDLE</span>
           <span class="toys-price">$29.00 USD</span>
         </a>
-      </div>
-      <div class="toys-item">
+      </li>
+      <li class="toys-item">
         <a class="toys-link" href="#">
           <img src="/images/tangle.png" alt="Tea Light">
           <span class="toys-text">TANGLE SPINNING TEA LIGHT</span>
           <span class="toys-price">$56.00 USD</span>
         </a>
-      </div>
+      </li>
+      </ul>
     </section>
     <section class="toys-nav">
       <h2 class="hidden">Navigation</h2>
